--- a/index.html
+++ b/index.html
@@ -2,21 +2,19 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Etch-A-Sketch</title>
+    <title>Pixel Draw</title>
     <link href="styles/eric-meyer-reset.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="images/simple-social-bookmark-order.png">
 </head>
 <body>
     <div id = "heading">
-        <h1>Etch-A-Sketch</h1>
-        <p id ="options">Create a new drawing board</p>
-        <a href = "#" id="standard">Standard</a>
-        <a href = "#" id="rainbow">Rainbow</a>
+        <h1>Pixel Draw</h1>
+        <a href = "#" id="standard">Reset Grid</a>
     </div>
     <div id="container"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="scripts/main.js"></script>
 </body>    
 </html>
